--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <div id="artigo1"><!--artigos da laretal-->
       <h4>Article 1</h4>
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quis fermentum ligula, vel suscipit eros. Integer in accumsan dui. Integer quis urna mattis, mollis felis quis, varius ex. Praesent nibh erat, pellentesque et ante sit amet, ornare cursus neque. Sed aliquet nunc odio, id rhoncus mauris euismod quis. 
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quis fermentum ligula, vel suscipit eros. Integer in accumsan dui. Integer quis urna mattis, mollis felis quis, varius ex. Praesent nibh erat, pellentesque et ante sit amet, ornare cursus neque. Sed aliquet nunc odio, id rhoncus mauris euismod quis. <a href="#">Learn more</a>
       </p>
     </div>
 
@@ -47,7 +47,7 @@
     <div id="artigo2"> 
     <h4>Article 2</h4> 
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quis fermentum ligula, vel suscipit eros. Integer in accumsan dui. Integer quis urna mattis, mollis felis quis, varius ex. Praesent nibh erat, pellentesque et ante sit amet, ornare cursus neque. Sed aliquet nunc odio, id rhoncus mauris euismod quis. 
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quis fermentum ligula, vel suscipit eros. Integer in accumsan dui. Integer quis urna mattis, mollis felis quis, varius ex. Praesent nibh erat, pellentesque et ante sit amet, ornare cursus neque. Sed aliquet nunc odio, id rhoncus mauris euismod quis. <a href="#">Learn more</a>
       </p>
       
     </div>
