--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 
     <div id="container"><!--engloba todo o site-->
     <div id="logo"><!--área da logo do site-->
-      <h1>Enter your logo</h1>
+      <img src="imagens/logo.jpg">
+      
     </div>
     
     <div id="menu"><!--menus do site;-->
